# bio_inspired_nanochat

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE_SONNET45_PREDICTIONS_ON_WHICH_NEW_BIO_INSPIRED_IDEAS_WILL_WORK_BEST_OR_NOT.md  PLAN_TO_USE_CMAES_FOR_HYPERPARAMETER_EXPLORATION_AND_OPTIMIZATION_ACROSS_ALL_BIO_INSPIRED_FEATURES.md  README.md  TESTING.md  pyproject.toml  ty.toml
.beads/: .gitignore  beads.base.jsonl  beads.base.meta.json  beads.left.jsonl  beads.left.meta.json  issues.jsonl  last-touched
.github/workflows/: ci.yml  quality.yml
.research/: anomaly-index.json
artifacts/RS-20251231-bionanochat-rrp-vs-freq/: artifact.md  delta_add_test_T1.md  delta_fill_minimum_artifact.md  excerpt.md  presyn_edge_dependence.py
artifacts/RS-20251231-bionanochat-rrp-vs-freq/experiments/T1/: 20251231T092732Z_f00fc4f9-ff6a-406b-9941-36952bd39607.json
artifacts/RS-20260102-bio-nanochat-rrp/: evidence.json  evidence.md
artifacts/RS-20260102-bio-nanochat-rrp/experiments/T1/: 20260102T134335Z_167d401d-694b-41fa-aa50-777dc9635510.json
bio_inspired_nanochat/: ablation_matrix.py  ablation_registry.py  adamw.py  checkpoint_manager.py  common.py  core_eval.py  cusp_certificate.py  dataloader.py  dataset.py  deliberation.py  divergence_guard.py  e2e_harness.py  engine.py  execution.py  flex_synaptic.py  gpt.py  gpt_synaptic.py  loss_eval.py  metrics_fused.py  metriplectic_integrator.py  muon.py  neuromod.py  neuroscore.py  neuroviz.py  report.py  results_registry.py  run_logging.py  stochastic_thermo.py  synaptic.py  synaptic_splitmerge.py  tokenizer.py
bio_inspired_nanochat/kernels/: __init__.py  genetics_fused.py  metrics_fused.py  presyn_fused.py  structural_fused.py
docs/: ablation_matrix.md  eval_benchmark_matrix.md  online_learning_status.md  parameter_census.json  parameter_census.md  scale_up_checkpointing.md  scale_up_ddp.md  scale_up_phase0_decisions.md  scale_up_training_recipe.md  stable_recurrence_theory.md
docs/theory/: README.md  metriplectic.md
nanochat/: checkpoint_manager.py  dataset.py  engine.py  gpt.py  gpt_synaptic.py  neuroscore.py  neuroviz.py  report.py  synaptic.py  synaptic_splitmerge.py
rust_src/src/: lib.rs  moe.rs  presyn.rs
rustbpe/src/: lib.rs  moe.rs  presyn.rs
scripts/: base_eval.py  base_loss.py  base_train.py  benchmark_flex.py  chat_cli.py  chat_eval.py  chat_rl.py  chat_sft.py  chat_web.py  dashboard.py  enable_synapses.py  eval_matrix.py  mid_train.py  param_census.py  run_bio_dual4090.sh  scale_memory.py  tok_eval.py  tok_train.py  tune_bio_params.py  verify_evolution.py  verify_flex_correctness.py
tasks/: humaneval.py  spellingbee.py
tests/: _bio_testkit.py  conftest.py  test_ablation_matrix.py  test_ach_exploration.py  test_attention_bias_clamp.py  test_chunked_tbptt.py  test_cusp_certificate.py  test_cusp_latch.py  test_dataset.py  test_deliberation.py  test_diff_recurrence_wiring.py  test_differentiable_recurrence.py  test_divergence_guard.py  test_engine.py  test_flex_canonical.py  test_framework_smoke.py  test_function_preserving_splitmerge.py  test_harness_smoke.py  test_hebbian_training_plasticity.py  test_learnable_kinetics.py  test_logit_softcap.py  test_metriplectic_runtime.py  test_metriplectic_theory.py  test_neuromod.py  test_neuroscore_lifecycle.py  test_niah_eval.py  test_online_fast_adaptation.py  test_param_census.py  test_presyn_canonical.py  test_presyn_golden.py  test_presyn_migration.py  test_presyn_param_census.py  test_results_registry.py  test_run_logging.py  test_rust_kernels.py  test_rustbpe.py  test_scaleup_ablation_e2e.py  test_scaleup_checkpoint.py  test_scaleup_e2e.py  test_scaleup_memory.py  (+7 more)
tests/golden/: presyn_canonical_v1.npz
