[project]
name = "bio-inspired-nanochat"
version = "0.1.0"
description = "the minimal full-stack ChatGPT clone"
readme = "README.md"
requires-python = ">=3.14,<3.15"
dependencies = [
    "datasets>=4.0.0",
    "fastapi>=0.117.1",
    "filelock>=3.19.0",
    "files-to-prompt>=0.6",
    "jinja2>=3.1.0",
    "matplotlib>=3.8.0",
    "numpy>=1.26.0",
    "psutil>=7.1.0",
    "pyarrow>=21.0.0",
    "python-decouple>=3.8",
    "pyyaml>=6.0.0",
    "regex>=2025.9.1",
    "requests>=2.31.0",
    "rich>=13.7.0",
    "setuptools>=80.9.0",
    "tensorboard>=2.16.0",
    "tiktoken>=0.11.0",
    "tokenizers>=0.22.0",
    "torch==2.9.1",
    "triton>=3.0.0",
    "transformers>=4.40.0",
    "uvicorn>=0.36.0",
    "wandb>=0.21.3",
    "ruff>=0.1.0",
    "cma>=3.2.2",
    "ty>=0.0.1a27",
]

[build-system]
requires = ["maturin>=1.7,<2.0"]
build-backend = "maturin"

[tool.maturin]
module-name = "rustbpe"
bindings = "pyo3"
python-source = "."
manifest-path = "rust_src/Cargo.toml"

[dependency-groups]
dev = [
    "maturin>=1.9.4",
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
]

[tool.pytest.ini_options]
# Marker taxonomy (eqyk.1). Use markers to scope CI runs:
#   unit  - fast, deterministic, no GPU/network/data downloads (PR gate)
#   e2e   - end-to-end runs that exercise a whole flow (nightly)
#   slow  - long-running (deselect with -m "not slow")
#   gpu   - requires CUDA; auto-skipped on CPU-only hosts (see conftest.py)
#   golden- compares against committed golden artifacts under tests/golden/
markers = [
    "unit: fast, deterministic unit test (PR gate, no GPU/network)",
    "e2e: end-to-end test exercising a full flow (nightly)",
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "gpu: requires CUDA; auto-skipped on CPU-only hosts",
    "golden: compares against committed golden artifacts (tests/golden/)",
    "smoke: fast in-process smoke of the flagship harnesses train/eval/tune (hm4.3); 'pytest -m smoke'",
]
# --strict-markers: an unregistered @pytest.mark.* is an error, never a silent typo.
addopts = "--strict-markers -ra"
# Make the in-repo `bio_inspired_nanochat` package importable without a full
# editable/maturin install (the Rust `rustbpe` extension is optional for most
# tests and is auto-skipped when absent). This lets `pytest` run after a plain
# `uv sync --no-install-project`.
pythonpath = ["."]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

# Coverage config (eqyk.1). The gate is OPT-IN via `--cov` (see TESTING.md / CI),
# so the default fast `pytest` stays lightweight. CI runs `pytest --cov` and the
# fail_under gate below blocks regressions on the bio modules.
[tool.coverage.run]
branch = true
source = ["bio_inspired_nanochat"]
omit = [
    "*/tests/*",
    "*/__init__.py",
]

[tool.coverage.report]
# Initial floor; ratchet upward as the test suite grows (do NOT lower it).
fail_under = 25
show_missing = true
skip_covered = false
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
]

# target torch to cuda 12.8 or CPU
[tool.uv.sources]
torch = [  
    { index = "pytorch-cpu", extra = "cpu" },  
    { index = "pytorch-cu128", extra = "gpu" },  
]  

[[tool.uv.index]]  
name = "pytorch-cpu"  
url = "https://download.pytorch.org/whl/cpu"  
explicit = true  

[[tool.uv.index]]  
name = "pytorch-cu128"  
url = "https://download.pytorch.org/whl/cu128"  
explicit = true

[project.optional-dependencies]  
cpu = [  
    "torch==2.9.1",  
]  
gpu = [  
    "torch==2.9.1",  
]  
viz = [
    "plotly>=5.18.0",
    "scikit-learn>=1.4.0",
    "umap-learn>=0.5.5",
    "streamlit>=1.32.0",
]  
  
[tool.uv]  
conflicts = [  
    [  
        { extra = "cpu" },  
        { extra = "gpu" },  
    ],  
]  
